crates/stc_ts_file_analyzer/tests/errors/issues/0xxx/415/1.ts
// @strict: true 

interface A {
    a: string;
}
interface B {
    b: string;
}
interface C {
    c: string;
}
interface D {
    d: string;
}

var anb: A & B;
var y: (A | B) & (C | D);

y = anb;

export { }